examples/test/testpolicy14802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14802
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key34: value23
      key12: value15
      key45: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value7
          key37: value33
          key45: value29
